-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.1.0
-
None
-
3
-
5041
With exports option "all_squash",running connectathon on NFS4 client over lustre, got permission deny error. With option "no_root_squash" option, this test can pass.
-rwxr-xr-x 1 sanityusr sanityusr 7997 May 2 13:13 excltest
---------- 1 sanityusr sanityusr 0 Feb 13 1970 exctest.file
/etc/exports:
/mnt/lustre *(fsid=0,rw,all_squash,anonuid=500,anongid=500)
Here is the result link:
https://maloo.whamcloud.com/test_sets/8d18aed2-70f9-11e0-a1b3-52540025f9af
- Trackbacks
-
Lustre 1.8.7-wc1 release testing tracker
Lustre 1.8.7wc1 RC1 Tag: v187WC1RC1 Build: